--- a/register.html
+++ b/register.html
@@ -3,51 +3,48 @@
   <head>
     <meta charset="UTF-8">
     <title>Baggage Claim Registry</title>
-    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
     <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="animate.css">
   </head>
   <body>
 <!-- HEADER/NAV Bar begins-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
-        <div class="p-3">
-          <a class="navbar-brand" href="index.html"><img style="margin-right:10px" src="./images/logo1.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">Baggage Claim</a>
-          <!--insert logo img-->
-        </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <div id="myNavbar" class="navbar navbar-expand-lg navbar-fixed-top" role="navigation">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+          <img src="./images/134216-32.png"  alt="logo missing">
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto p-2">
-            <a class="nav-item nav-link" href="suitcase.html">Login</a>
-          </div>
+        <!-- <div class="navbar-header"> -->
+
+        <a href="#" class="navbar-brand"> Baggage Claim </a>
+
+        <!-- </div>  -->
         </div>
-    </nav>
+      </div>
 <!-- HEADER/NAV Bar ends-->
-    <div class="container-fluid" style="background-color:white; height: 900px; width: 1400px;">
-<!-- Container begins-->
-<!-- Row 1 begins-->
-      <div class="row" style="background-color:silver;">
-<!-- Row 1 Col1 begins-->
-      <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
-        <script> // Initialize Firebase
-          var config =
-          {
-            apiKey: "AIzaSyBU3UytS_kKst5NLalHGVDVtjCXg1_HIoY",
-            authDomain: "mybaggage-b7161.firebaseapp.com",
-            databaseURL: "https://mybaggage-b7161.firebaseio.com",
-            projectId: "mybaggage-b7161",
-            storageBucket: "mybaggage-b7161.appspot.com",
-            messagingSenderId: "496506144046"
-          };
-          firebase.initializeApp(config);
-        </script>
+<!-- Firebase begins-->
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+        apiKey: "AIzaSyBU3UytS_kKst5NLalHGVDVtjCXg1_HIoY",
+        authDomain: "mybaggage-b7161.firebaseapp.com",
+        databaseURL: "https://mybaggage-b7161.firebaseio.com",
+        projectId: "mybaggage-b7161",
+        storageBucket: "mybaggage-b7161.appspot.com",
+        messagingSenderId: "496506144046"
+        };
+        firebase.initializeApp(config);
+    </script>
         <!-- The code below initializes the sign-in widget from FirebaseUI web. -->
-        <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>
-        <script type="text/javascript">
-          var uiConfig =
-          {
+    <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
+          <script type="text/javascript">
+            var uiConfig = {
             signInSuccessUrl: 'suitcase.html',
             signInOptions: [
              // Specify providers you want to offer your users.
@@ -56,28 +53,80 @@
             ],
             // Terms of service url can be specified and will show up in the widget.
             tosUrl: '<your-tos-url>'
-          };
-          // Initialize the FirebaseUI Widget using Firebase.
-          var ui = new firebaseui.auth.AuthUI(firebase.auth());
-          // The start method will wait until the DOM is loaded.
-          ui.start('#firebaseui-auth-container', uiConfig);
+            };
+        // Initialize the FirebaseUI Widget using Firebase.
+        var ui = new firebaseui.auth.AuthUI(firebase.auth());
+        // The start method will wait until the DOM is loaded.
+        ui.start('#firebaseui-auth-container', uiConfig);
         </script>
-      <!-- Include a simple background image & and title -->
-      <div>
+<!-- Firebase ends -->
+<!-- Header Begins -->
+    <div class="regHeader">
+      <div class="container">
+        <div id="firebaseui-auth-container" style="padding-top:150px; margin-left:120px;">
+        </div>
       </div>
-        <h1 align="center" style="color:white;">By Signing in cliam your Baggage!!</h1>
-         <div id="firebaseui-auth-container">
+    </div> <!-- header ends -->
+   <div id="services" class="services">
+     <div class="container">
+       <h2> Services </h2>
+       <p> Baggage Claim offers three item accountability services.</p>
+       <div class="row">
+         <div class="col-lg-4 col-md-4">
+           <i class="fa fa-map-marker" aria-hidden="true"></i>
+           <h4> Travel </h4>
+           <p> A virtual suitcase for domestic and international travel, as well as gym and overnight bags. Keeps track of all your goods as you move from point A to point B.</p>
          </div>
+         <div class="col-lg-4 col-md-4">
+           <i class="fa fa-building" aria-hidden="true"></i>
+           <h4> Relocation </h4>
+           <p> A virtual UHaul for relocation. Keeps track of your items as you move into that new apartment, into a dorm, into a new office, or across the country into a new home.</p>
+         </div>
+         <div class="col-lg-4 col-md-4">
+           <i class="fa fa-phone-square" aria-hidden="true"></i>
+           <h4> Claim Support </h4>
+           <p> Baggage Claim logs your items, each individual value, as well as the value of the entire suitcase. If property damage or theft occurs, Baggage Claim will submit your log directly to your insurance provider for additional claim support. </p>
+         </div>
+       </div>
+     </div>
+   </div><!-- End Services -->
+
 <!--end of Row 1-->
 <!-- Row 4/FOOTER begins-->
-      <div class="row">
-        <div class="col-md-12">
-          <div class="fixed-bottom d-flex justify-content-center p-3"><br>2017@Copyright Baggage Claim<br>
+        <div id="footer" class="footer">
+          <div class="container">
+            <h2>Copyright 2017 </h2>
+            <div class="row">
+              <div class="col-lg-4 col-md-4">
+                <h4> Contact Us </h4>
+                <p><i class="fa fa-home" aria-hidden="true"></i> 950 N Glebe Rd, Arlington, VA 22203</p>
+                <p><i class="fa fa-envelope" aria-hidden="true"></i> hi@baggageclaim.com</p>
+                <p><i class="fa fa-phone" aria-hidden="true"></i> +1 281-330-8004</p>
+                <p><i class="fa fa-globe" aria-hidden="true"></i> wwww.baggageclaim.com</p>
+              </div>
+              <div class="col-lg-4 col-md-4">
+                <h4> About </h4>
+                  <p><i class="fa fa-square-o" aria-hidden="true"></i> About Us</p>
+                  <p><i class="fa fa-square-o" aria-hidden="true"></i> Privacy Policy</p>
+                  <p><i class="fa fa-square-o" aria-hidden="true"></i> Terms and Conditions </p>
+                  <p><i class="fa fa-square-o" aria-hidden="true"></i> Careers </p>
+              </div>
+              <div class="col-lg-4 col-md-4">
+                <h4> Connect With Us </h4>
+                <i class="social fa fa-facebook-official" aria-hidden="true"></i>
+                <i class="social fa fa-twitter" aria-hidden="true"></i>
+                <i class="social fa fa-linkedin" aria-hidden="true"></i>
+                <i class="social fa fa-pinterest" aria-hidden="true"></i>
+                <i class="social fa fa-instagram" aria-hidden="true"></i>
+                <i class="social fa fa-github" aria-hidden="true"></i>
+                <br>
+                <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-info"> Subscribe </button>
+                <br>
+              </div>
+            </div>
           </div>
-        </div>
-      </div><!--end of row 4/FOOTER-->
-    </div><!--end of container-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./javascript/site.js"></script>
+        </div>    <!--end of row 4/FOOTER-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="./javascript/site.js"></script>
   </body>
 </html>
