--- a/suitcase.html
+++ b/suitcase.html
@@ -2,124 +2,160 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Baggage Claim | Virtual Suitcase</title>
-    <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
+    <title>Baggage Claim Registry</title>
     <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stylesheet.css" type="text/css">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="./css/animate.css">
   </head>
   <body>
     <!-- HEADER/NAV Bar begins-->
-        <nav class="navbar navbar-expand-md navbar-light bg-light d-flex p-2">
-            <div class="p-3">
-              <a class="navbar-brand" href="index.html"><img style="margin-right:10px" src="./images/logo1.png" width="30" height="30" class="d-inline-block align-top" alt="logo missing">Baggage Claim</a>
-              <!--insert logo img-->
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav ml-auto p-2">
-                <a class="nav-item nav-link" href="suitcase.html">Login</a>
-              </div>
-            </div>
-        </nav>
-    <!-- HEADER/NAV Bar ends-->
-<!-- Main Container begins-->
-    <div class="container">
-      <div class="row" style="background-color:#ADD8E6;">
-<!-- Row 1 Col1 INVENTORY begins-->
-        <div class="col-md-3" id="tasks">
-          <h1>INVENTORY</h1>
-          <!-- Inventory Array-->
+    <div id="myNavbar" class="navbar navbar-expand-lg navbar-fixed-top" role="navigation">
+      <div class="container">
+        <!-- <div class="navbar-header"> -->
+          <ul class="nav navbar-nav navbar-left">
+            <li><a href="index.html" style="font-size:16pt; padding-bottom:2px; padding-top:2px;"> Baggage Claim </a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="register.html"> Logout </a></li>
+          </ul>
         </div>
-<!-- Row 1 Col2 begins-->
-        <div class="col-md-9 d-flex justify-content-center p-3" style="background-color:#ADD8E6; height:400px;">
-          <!-- Suitcase Animation-->
-          <img src="" alt="giant animated suitcase missing">
+      </div>
+    <!-- HEADER/NAV Bar ends-->
+    <div class="suitFont">
+      <div class="row">
+  <!-- Row 1 Col1 INVENTORY begins-->
+        <div class="col-md-6">
+          <div id="tasks" style="width:400px; text-align:center;" class="item animated fadeInLeft">
+            <br>
+            <p style="text-align:center; font-size: 20pt;">INVENTORY</p>
+            <!-- Inventory Array-->
+          </div>
+        </div>
+  <!-- Row 1 Col2 begins-->
+        <div class="col-md-5 d-flex justify-content-center p-3">
+  <!-- Suitcase Animation-->
+          <div class="item animated fadeInRight">
+            <img src="./images/image11.png" alt="giant animated suitcase missing">
+          </div>
         </div>
       </div><!--end of Row 1-->
-        <div class="row" style="background-color:#ADD8E6;">
-          <div class="col-md-12" style="background-color:#ADD8E6;">
-            <div class="d-flex justify-content-center">
-              <input id="new-task" type="text">
-              <button id="add">Add!</button>
-              <br>
-            </div>
-            <br>
-            <p class="d-flex justify-content-center">Enter your own custom items to the list or Click next to the icons for pre-loaded items:</p>
+      <div class="row" style="background-color:#1ABC9C;">
+        <div class="col-md-12">
+          <br>
+          <br>
+          <div class="d-flex justify-content-center">
+            <input id="new-task" type="text">
+            <button id="add">Add!</button>
             <br>
           </div>
-        </div><!--end of row 2-->
-      <div class="row" style="background-color:#ADD8E6;">
-        <div class="col-md-6" style="background-color:#ADD8E6;">
+          <br>
+          <p class="d-flex justify-content-center" style="font-size: 20pt;">Enter your own custom items to the list or Click next to the icons for pre-loaded items:</p>
+          <br>
+        </div>
+      </div><!--end of row 2-->
+      <div class="row" style="background-color:#1ABC9C;">
+        <div class="col-md-6" style="background-color:#1ABC9C;">
           <div>
             <ul style="list-style-type: none;">
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Cell Phone">
                 <img width="50px" height="50px" alt="missing img" src="./images/cellPhone.jpg">
-                <button class="justify-content-center" value="Cell Phone">Add!</button>
+                <button class="justify-content-center" value="Cell Phone - $750">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value ="Shoes">
                 <img width="50px" height="50px" alt="missing img" src="./images/runningShoes.jpg">
-                <button class="justify-content-center" value="Shoes">Add!</button>
+                <button class="justify-content-center" value="Shoes - $100">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Watch">
                 <img width="50px" height="50px" alt="missing img" src="./images/watch.jpg">
-                <button class="justify-content-center" value="Watch">Add!</button>
+                <button class="justify-content-center" value="Watch - $350">Add!</button>
               </li>
             </ul>
           </div>
         </div>
-        <div class="col-md-6" style="background-color:#ADD8E6;">
+        <div class="col-md-6" style="background-color:#1ABC9C;">
           <div>
             <ul style="list-style-type: none;">
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Laptop Charger">
                 <img width="50px" height="50px" alt="missing img" src="./images/laptopCharger.jpg">
-                <button class="justify-content-center" value="Laptop Charger">Add!</button>
+                <button class="justify-content-center" value="Laptop Charger - $80">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Earrings">
                 <img width="50px" height="50px" alt="missing img" src="./images/earrings.jpg">
-                <button class="justify-content-center" value="Earrings">Add!</button>
+                <button class="justify-content-center" value="Earrings - $150">Add!</button>
               </li>
               <br>
               <li class="d-flex justify-content-center">
                 <input id="new-task" type="text" value="Phone Charger">
                 <img width="50px" height="50px" alt="missing img" src="./images/phoneCharger.jpg">
-                <button class="justify-content-center" value="Phone Charger">Add!</button>
+                <button class="justify-content-center" value="Phone Charger - $30">Add!</button>
               </li>
             </ul>
           </div>
         </div>
       </div><!--end of row 3-->
 <!-- Row 4 begins-->
-      <div class="row" style="background-color:#ADD8E6;">
-        <div class="col-md-6" style="background-color:#ADD8E6;">
+      <div class="row" style="background-color:#1ABC9C;">
+        <div class="col-md-6" style="background-color:#1ABC9C;">
           <div class="d-flex justify-content-center">
             <br>
           </div>
         </div>
-        <div class="col-md-6" style="background-color:#ADD8E6;">
+        <div class="col-md-6" style="background-color:#1ABC9C;">
           <div class="d-flex justify-content-center">
             <br>
           </div>
         </div>
       </div><!--end of row 4-->
+    </div> <!-- end of suitFont -->
 <!-- Row 5/FOOTER begins-->
-      <div class="row">
-        <div class="col-md-12">
-          <div class="fixed-bottom d-flex justify-content-center p-3"><br>2017@Copyright Baggage Claim<br>
+    <footer>
+      <div id="footer" class="footer">
+        <div class="container">
+          <h2 class="wow fadeInUp"> Copyright 2017 </h2>
+          <div class="row">
+            <div class="col-lg-4 col-md-4">
+              <h4> Contact Us </h4>
+              <p><i class="fa fa-home" aria-hidden="true"></i> 950 N Glebe Rd, Arlington, VA 22203</p>
+              <p><i class="fa fa-envelope" aria-hidden="true"></i> hi@baggageclaim.com</p>
+              <p><i class="fa fa-phone" aria-hidden="true"></i> +1 281-330-8004</p>
+              <p><i class="fa fa-globe" aria-hidden="true"></i> wwww.baggageclaim.com</p>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <h4> About </h4>
+                <p><i class="fa fa-square-o" aria-hidden="true"></i> About Us</p>
+                <p><i class="fa fa-square-o" aria-hidden="true"></i> Privacy Policy</p>
+                <p><i class="fa fa-square-o" aria-hidden="true"></i> Terms and Conditions </p>
+                <p><i class="fa fa-square-o" aria-hidden="true"></i> Careers </p>
+            </div>
+            <div class="col-lg-4 col-md-4">
+              <h4> Connect With Us </h4>
+              <i class="social fa fa-facebook-official" aria-hidden="true"></i>
+              <i class="social fa fa-twitter" aria-hidden="true"></i>
+              <i class="social fa fa-linkedin" aria-hidden="true"></i>
+              <i class="social fa fa-pinterest" aria-hidden="true"></i>
+              <i class="social fa fa-instagram" aria-hidden="true"></i>
+              <i class="social fa fa-github" aria-hidden="true"></i>
+              <br>
+              <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-info"> Subscribe </button>
+              <br>
+            </div>
           </div>
         </div>
-      </div><!--end of row 5/FOOTER-->
-    </div><!--end of container-->
+      </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./javascript/site.js"></script>
   </body>
