final draft awaiting DB v2

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </div>
           <div class="col-lg-6 col-md-6">
             <div class="input-group">
-            <textarea name="" cols="80" rows="6" class="form-control"></textarea>
+            <textarea name="_" cols="80" rows="6" class="form-control"></textarea>
             </div>
             <button class="btn btn-lg">Submit Your Message</button>
           </div>
@@ -292,7 +292,7 @@
               <i class="social fa fa-instagram" aria-hidden="true"></i>
               <i class="social fa fa-github" aria-hidden="true"></i>
               <br>
-              <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-dark"> Subscribe </button>
+              <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-secondary"> Subscribe </button>
               <br>
             </div>
           </div>
