--- a/suitcase.html
+++ b/suitcase.html
@@ -62,21 +62,19 @@
         <div class="col-md-6" style="background-color:#1ABC9C;">
           <div>
             <ul style="list-style-type: none;">
-              <li class="d-flex justify-content-center">
+              <li class="d-flex justify-content-center" style="margin:20px;">
                 <input id="new-task" type="text" value="Cell Phone">
-                <img width="50px" height="50px" alt="missing img" src="./images/cellPhone.jpg">
+                <img style="width: 50px; height:50px" alt="missing img" src="./images/cellPhone.jpg">
                 <button class="justify-content-center" value="Cell Phone - $750">Add!</button>
               </li>
-              <br>
-              <li class="d-flex justify-content-center">
+              <li class="d-flex justify-content-center" style="margin:20px;">
                 <input id="new-task" type="text" value ="Shoes">
-                <img width="50px" height="50px" alt="missing img" src="./images/runningShoes.jpg">
+                <img style="width: 50px; height:50px" alt="missing img" src="./images/runningShoes.jpg">
                 <button class="justify-content-center" value="Shoes - $100">Add!</button>
               </li>
-              <br>
-              <li class="d-flex justify-content-center">
+              <li class="d-flex justify-content-center" style="margin:20px;">
                 <input id="new-task" type="text" value="Watch">
-                <img width="50px" height="50px" alt="missing img" src="./images/watch.jpg">
+                <img style="width: 50px; height:50px" alt="missing img" src="./images/watch.jpg">
                 <button class="justify-content-center" value="Watch - $350">Add!</button>
               </li>
             </ul>
@@ -85,21 +83,19 @@
         <div class="col-md-6" style="background-color:#1ABC9C;">
           <div>
             <ul style="list-style-type: none;">
-              <li class="d-flex justify-content-center">
+              <li class="d-flex justify-content-center" style="margin:20px;">
                 <input id="new-task" type="text" value="Laptop Charger">
-                <img width="50px" height="50px" alt="missing img" src="./images/laptopCharger.jpg">
+                <img style="width: 50px; height:50px" alt="missing img" src="./images/laptopCharger.jpg">
                 <button class="justify-content-center" value="Laptop Charger - $80">Add!</button>
               </li>
-              <br>
-              <li class="d-flex justify-content-center">
+              <li class="d-flex justify-content-center" style="margin:20px;">
                 <input id="new-task" type="text" value="Earrings">
-                <img width="50px" height="50px" alt="missing img" src="./images/earrings.jpg">
+                <img style="width: 50px; height:50px" alt="missing img" src="./images/earrings.jpg">
                 <button class="justify-content-center" value="Earrings - $150">Add!</button>
               </li>
-              <br>
-              <li class="d-flex justify-content-center">
+              <li class="d-flex justify-content-center" style="margin:20px;">
                 <input id="new-task" type="text" value="Phone Charger">
-                <img width="50px" height="50px" alt="missing img" src="./images/phoneCharger.jpg">
+                <img style="width: 50px; height:50px" alt="missing img" src="./images/phoneCharger.jpg">
                 <button class="justify-content-center" value="Phone Charger - $30">Add!</button>
               </li>
             </ul>
@@ -149,7 +145,7 @@
               <i class="social fa fa-instagram" aria-hidden="true"></i>
               <i class="social fa fa-github" aria-hidden="true"></i>
               <br>
-              <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-info"> Subscribe </button>
+              <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-secondary"> Subscribe </button>
               <br>
             </div>
           </div>
