--- a/register.html
+++ b/register.html
@@ -15,12 +15,9 @@
 <!-- HEADER/NAV Bar begins-->
     <div id="myNavbar" class="navbar navbar-expand-lg navbar-fixed-top" role="navigation">
       <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-          <img src="./images/134216-32.png"  alt="logo missing">
-        </button>
-        <!-- <div class="navbar-header"> -->
+<!-- <div class="navbar-header"> -->
 
-        <a href="#" class="navbar-brand"> Baggage Claim </a>
+        <a href="index.html" class="navbar-brand"> Baggage Claim </a>
 
         <!-- </div>  -->
         </div>
@@ -120,7 +117,7 @@
                 <i class="social fa fa-instagram" aria-hidden="true"></i>
                 <i class="social fa fa-github" aria-hidden="true"></i>
                 <br>
-                <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-info"> Subscribe </button>
+                <input type="email" placeholder="Subscribe for Updates"><button class="btn btn-secondary"> Subscribe </button>
                 <br>
               </div>
             </div>
