Final draft awaiting DB v3

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <p> King Fitsum of House Belayneh. Lion of Ethiopia. Czar of User Authentication. Father of Hasset. Monarch of Atom.</p>
           </div>
           <div class="col-lg-3 col-md-3">
-            <img src="./images/Sean.jpg" width="110" height="150" alt="Sean">
+            <img src="./images/Sean.JPG" width="110" height="150" alt="Sean">
             <hr>
             <b> CEO and Founder </b>
             <hr>
